- Add fhgfs check for metadata iostat - Move agent scripts from /usr/local/bin to /var/lib/zabbix/bin - Replace rspec-system tests with beaker-rspec - bump to 1.1.0

--- a/templates/agent/userparameter_fhgfs.conf.erb
+++ b/templates/agent/userparameter_fhgfs.conf.erb
@@ -52,3 +52,15 @@ UserParameter=fhgfs.pool.status[*],fhgfs-ctl --listpools --nodetype=$2 | sed -r 
 #  Number of registered FhGFS clients
 #
 UserParameter=fhgfs.client.num,fhgfs-ctl --listnodes --nodetype=client | wc -l
+
+# fhgfs.iostat
+#
+# Arguments:
+#   1 - nodeNumID
+#   2 - type (reqs, qlen or bsy)
+#   3 - history (10-60)
+#
+# Returns:
+#   iostat average over 'history' for 'type'
+#
+UserParameter=fhgfs.metadata.iostat[*],<%= @metadata_iostat_path %> $1 $2 $3
