Fix typo in comments for fhgfs userparameters file

--- a/templates/agent/userparameter_fhgfs.conf.erb
+++ b/templates/agent/userparameter_fhgfs.conf.erb
@@ -53,7 +53,7 @@ UserParameter=fhgfs.pool.status[*],fhgfs-ctl --listpools --nodetype=$2 | sed -r 
 #
 UserParameter=fhgfs.client.num,fhgfs-ctl --listnodes --nodetype=client | wc -l
 
-# fhgfs.iostat
+# fhgfs.metadata.iostat
 #
 # Arguments:
 #   1 - nodeNumID
