--- a/templates/agent/userparameter_fhgfs.conf.erb
+++ b/templates/agent/userparameter_fhgfs.conf.erb
@@ -56,7 +56,7 @@ UserParameter=fhgfs.client.num,fhgfs-ctl --listnodes --nodetype=client | wc -l
 # fhgfs.metadata.iostat
 #
 # Arguments:
-#   1 - nodeNumID
+#   1 - nodeNumID (or 'all' for all nodes)
 #   2 - type (reqs, qlen or bsy)
 #   3 - history (10-60)
 #
@@ -68,7 +68,7 @@ UserParameter=fhgfs.metadata.iostat[*],<%= @metadata_iostat_path %> $1 $2 $3
 # fhgfs.storage.iostat
 #
 # Arguments:
-#   1 - nodeNumID
+#   1 - nodeNumID (or 'all' for all nodes)
 #   2 - type (write, read, reqs, qlen or bsy)
 #   3 - history (10-60)
 #
